Add Connection-Pooling Reduce Database load optimize quest assignment, format code, add atomic Update queries to in/decrease quest likes/dislikes