@@ -4,23 +4,24 @@ import com.dayquest.dayquestbackend.auth.service.JwtService;
 import com.dayquest.dayquestbackend.activity.ActivityUpdater;
 import com.dayquest.dayquestbackend.quest.dto.InteractionDTO;
 import com.dayquest.dayquestbackend.quest.dto.QuestDTO;
-import com.dayquest.dayquestbackend.user.UserRepository;
 import com.dayquest.dayquestbackend.user.User;
+import com.dayquest.dayquestbackend.user.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Async;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/quests")
 public class QuestController {
-
 
     @Autowired
     private QuestService questService;
@@ -33,164 +34,189 @@ public class QuestController {
 
     @Autowired
     private ActivityUpdater activityUpdater;
+
     @Autowired
     private JwtService jwtService;
 
+
     @GetMapping
     @Async
-    public CompletableFuture<ResponseEntity<List<QuestDTO>>> getQuests(@RequestHeader("Authorization") String token,
-                                                                       @RequestParam(defaultValue = "0") int page,
-                                                                       @RequestParam(defaultValue = "10") int size,
-                                                                       @RequestParam(defaultValue = "createdAt") String sortBy,
-                                                                       @RequestParam(defaultValue = "DESC") Sort.Direction sortDirection) {
+    public CompletableFuture<ResponseEntity<List<QuestDTO>>> getQuests(
+            @RequestHeader("Authorization") String token,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size,
+            @RequestParam(defaultValue = "createdAt") String sortBy,
+            @RequestParam(defaultValue = "DESC") Sort.Direction sortDirection) {
         return CompletableFuture.supplyAsync(() -> {
+            String username = jwtService.extractUsername(token.substring(7));
+            User currentUser = userRepository.findByUsername(username);
+            if (currentUser == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+            }
+            List<UUID> likedQuestIds = currentUser.getLikedQuests();
+            List<UUID> dislikedQuestIds = currentUser.getDislikedQuests();
+
             Sort sort = Sort.by(sortDirection, sortBy);
             PageRequest pageRequest = PageRequest.of(page, size, sort);
             List<Quest> quests = questRepository.findAll(pageRequest).getContent();
             List<QuestDTO> questDTOS = quests.stream().map(quest -> {
-                QuestDTO questDTO = new QuestDTO();
-                questDTO.setUuid(quest.getUuid());
-                questDTO.setCreatorUuid(quest.getCreatorUuid());
-                questDTO.setTitle(quest.getTitle());
-                questDTO.setDescription(quest.getDescription());
-                questDTO.setLikes(quest.getLikes());
-                questDTO.setDislikes(quest.getDislikes());
-                questDTO.setCreatedAt(quest.getCreatedAt());
-                questDTO.setLiked(userRepository.findByUsername(jwtService.extractUsername(token.substring(7))).getLikedQuests().contains(quest.getUuid()));
-                questDTO.setDisliked(userRepository.findByUsername(jwtService.extractUsername(token.substring(7))).getDislikedQuests().contains(quest.getUuid()));
-                return questDTO;
-            }).toList();
+                QuestDTO dto = new QuestDTO();
+                dto.setUuid(quest.getUuid());
+                dto.setCreatorUuid(quest.getCreatorUuid());
+                dto.setTitle(quest.getTitle());
+                dto.setDescription(quest.getDescription());
+                dto.setLikes(quest.getLikes());
+                dto.setDislikes(quest.getDislikes());
+                dto.setCreatedAt(quest.getCreatedAt());
+                dto.setLiked(likedQuestIds.contains(quest.getUuid()));
+                dto.setDisliked(dislikedQuestIds.contains(quest.getUuid()));
+                return dto;
+            }).collect(Collectors.toList());
             return ResponseEntity.ok(questDTOS);
         });
     }
 
+
     @PostMapping("/create")
     @Async
-    public CompletableFuture<ResponseEntity<Quest>> createQuest(@RequestBody Quest quest, @RequestHeader("Authorization") String token) {
-        if (quest.getDescription().toLowerCase().contains("penis")) {
-            return CompletableFuture.completedFuture(ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null));
-        }
+    public CompletableFuture<ResponseEntity<Quest>> createQuest(
+            @RequestBody Quest quest,
+            @RequestHeader("Authorization") String token) {
 
-        return questService.createQuest(quest.getTitle(), quest.getDescription(), userRepository.findByUsername(jwtService.extractUsername(token.substring(7))))
+        if (quest.getDescription().toLowerCase().contains("penis")) {
+            return CompletableFuture.completedFuture(
+                    ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null));
+        }
+        String username = jwtService.extractUsername(token.substring(7));
+        User creator = userRepository.findByUsername(username);
+        if (creator == null) {
+            return CompletableFuture.completedFuture(
+                    ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(null));
+        }
+        return questService.createQuest(quest.getTitle(), quest.getDescription(), creator)
                 .thenApply(newQuest -> ResponseEntity.status(HttpStatus.CREATED).body(newQuest));
     }
 
+
     @PostMapping("/like")
     @Async
+    @Transactional
     public CompletableFuture<ResponseEntity<?>> likeQuest(@RequestBody InteractionDTO interactionDTO) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(interactionDTO.getUserUuid());
-            Optional<Quest> quest = questRepository.findById(interactionDTO.getUuid());
-            if (user.isEmpty() || quest.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(interactionDTO.getUserUuid());
+            Optional<Quest> questOpt = questRepository.findById(interactionDTO.getUuid());
+            if (userOpt.isEmpty() || questOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
+            User user = userOpt.get();
+            Quest quest = questOpt.get();
 
-            if (user.get().getLikedQuests().contains(interactionDTO.getUuid())) {
+            if (user.getLikedQuests().contains(quest.getUuid())) {
                 return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body("Already liked");
             }
-
-            if (user.get().getDislikedQuests().contains(interactionDTO.getUuid())) {
-                user.get().getDislikedQuests().remove(interactionDTO.getUuid());
-                quest.get().setDislikes(quest.get().getDislikes() - 1);
+            if (user.getDislikedQuests().remove(quest.getUuid())) {
+                questRepository.decrementDislikes(quest.getUuid());
             }
+            user.getLikedQuests().add(quest.getUuid());
+            questRepository.incrementLikes(quest.getUuid());
 
-            user.get().getLikedQuests().add(interactionDTO.getUuid());
-            quest.get().setLikes(quest.get().getLikes() + 1);
-            questRepository.save(quest.get());
+            questRepository.save(quest);
             activityUpdater.increaseInteractions(user);
-            userRepository.save(user.get());
+            userRepository.save(user);
+
             return ResponseEntity.ok("Successfully liked quest");
         });
     }
 
     @DeleteMapping("/like")
     @Async
+    @Transactional
     public CompletableFuture<ResponseEntity<?>> unlikeQuest(@RequestBody InteractionDTO interactionDTO) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(interactionDTO.getUserUuid());
-            Optional<Quest> quest = questRepository.findById(interactionDTO.getUuid());
-            if (user.isEmpty() || quest.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(interactionDTO.getUserUuid());
+            Optional<Quest> questOpt = questRepository.findById(interactionDTO.getUuid());
+            if (userOpt.isEmpty() || questOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
+            User user = userOpt.get();
+            Quest quest = questOpt.get();
 
-            if (!user.get().getLikedQuests().contains(interactionDTO.getUuid())) {
+            if (!user.getLikedQuests().contains(quest.getUuid())) {
                 return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body("Not liked");
             }
-
-            user.get().getLikedQuests().remove(interactionDTO.getUuid());
-            quest.get().setLikes(quest.get().getLikes() - 1);
-            questRepository.save(quest.get());
-            userRepository.save(user.get());
+            user.getLikedQuests().remove(quest.getUuid());
+            questRepository.decrementLikes(quest.getUuid());
+            questRepository.save(quest);
+            userRepository.save(user);
             return ResponseEntity.ok("Successfully unliked quest");
         });
     }
 
-
-    //TODO: Refactor this code dupe
     @PostMapping("/dislike")
     @Async
+    @Transactional
     public CompletableFuture<ResponseEntity<?>> dislikeQuest(@RequestBody InteractionDTO interactionDTO) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(interactionDTO.getUserUuid());
-            Optional<Quest> quest = questRepository.findById(interactionDTO.getUuid());
-            if (user.isEmpty() || quest.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(interactionDTO.getUserUuid());
+            Optional<Quest> questOpt = questRepository.findById(interactionDTO.getUuid());
+            if (userOpt.isEmpty() || questOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
+            User user = userOpt.get();
+            Quest quest = questOpt.get();
 
-            if (user.get().getDislikedQuests().contains(interactionDTO.getUuid())) {
+            if (user.getDislikedQuests().contains(quest.getUuid())) {
                 return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body("Already disliked");
             }
-
-            if (user.get().getLikedQuests().contains(interactionDTO.getUuid())) {
-                user.get().getLikedQuests().remove(interactionDTO.getUuid());
-                quest.get().setLikes(quest.get().getLikes() - 1);
+            if (user.getLikedQuests().remove(quest.getUuid())) {
+                questRepository.decrementLikes(quest.getUuid());
             }
-
-            user.get().getDislikedQuests().add(interactionDTO.getUuid());
-            quest.get().setDislikes(quest.get().getDislikes() + 1);
-            questRepository.save(quest.get());
+            user.getDislikedQuests().add(quest.getUuid());
+            questRepository.incrementDislikes(quest.getUuid());
+            questRepository.save(quest);
             activityUpdater.increaseInteractions(user);
-            userRepository.save(user.get());
+            userRepository.save(user);
             return ResponseEntity.ok("Successfully disliked quest");
         });
     }
 
     @DeleteMapping("/dislike")
     @Async
+    @Transactional
     public CompletableFuture<ResponseEntity<?>> undislikeQuest(@RequestBody InteractionDTO interactionDTO) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(interactionDTO.getUserUuid());
-            Optional<Quest> quest = questRepository.findById(interactionDTO.getUuid());
-            if (user.isEmpty() || quest.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(interactionDTO.getUserUuid());
+            Optional<Quest> questOpt = questRepository.findById(interactionDTO.getUuid());
+            if (userOpt.isEmpty() || questOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
+            User user = userOpt.get();
+            Quest quest = questOpt.get();
 
-            if (!user.get().getDislikedQuests().contains(interactionDTO.getUuid())) {
+            if (!user.getDislikedQuests().contains(quest.getUuid())) {
                 return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).body("Not disliked");
             }
-
-            user.get().getDislikedQuests().remove(interactionDTO.getUuid());
-            quest.get().setDislikes(quest.get().getDislikes() - 1);
-            questRepository.save(quest.get());
-            userRepository.save(user.get());
+            user.getDislikedQuests().remove(quest.getUuid());
+            questRepository.decrementDislikes(quest.getUuid());
+            questRepository.save(quest);
+            userRepository.save(user);
             return ResponseEntity.ok("Successfully undisliked quest");
         });
     }
 
-    //TODO: Remove after next Beta
     @PostMapping("/get-quest")
     @Async
     public CompletableFuture<ResponseEntity<String>> getQuest(@RequestBody UUID uuid) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(uuid);
-            if (user.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(uuid);
+            if (userOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
-            Quest quest = questRepository.findById(user.get().getDailyQuest().getUuid()).orElse(null);
-            if (quest == null) {
+            Quest dailyQuest = userOpt.get().getDailyQuest();
+            if (dailyQuest == null) {
                 return ResponseEntity.notFound().build();
             }
-            return ResponseEntity.ok(quest.getDescription());
+            return ResponseEntity.ok(dailyQuest.getDescription());
         });
     }
 
@@ -198,16 +224,15 @@ public class QuestController {
     @Async
     public CompletableFuture<ResponseEntity<QuestDTO>> getUsersQuest(@PathVariable UUID userid) {
         return CompletableFuture.supplyAsync(() -> {
-            Optional<User> user = userRepository.findById(userid);
-            if (user.isEmpty()) {
+            Optional<User> userOpt = userRepository.findById(userid);
+            if (userOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
-            Quest quest = user.get().getDailyQuest();
+            Quest quest = userOpt.get().getDailyQuest();
             if (quest == null) {
                 return ResponseEntity.notFound().build();
             }
-            QuestDTO questDTO = new QuestDTO(quest);
-            return ResponseEntity.ok(questDTO);
+            return ResponseEntity.ok(new QuestDTO(quest));
         });
     }
 }
